# langchain-rag-sample

./: .gitignore  Dockerfile  Pipfile  README.md  main.py  pyproject.toml
backend/: core.py
