[tool.poetry]
name = "langchain-rag-sample"
version = "0.1.0"
description = "A project to demonstrate sample doc upload functionality with LLM"
authors = ["Anuj Gupta <anuj78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "*"
beautifulsoup4 = "*"
black = "*"
tiktoken = "*"
openai = "*"
pinecone-client = "*"
unstructured = "*"
nltk = "*"
fastapi = "*"
jinja2 = "*"
uvicorn = "*"
streamlit = "*"
streamlit-chat = "*"
tqdm = "*"
langchain-pinecone = "*"
langchain-openai = "*"
langchain-community = "*"
isort = "*"
langchainhub = "*"
python-dotenv = "*"
docx2txt = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
